k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service
  namespace: ecommerce-devops

spec:
  replicas: 1

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service-container
          image: nginx:alpine

          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"

            limits:
              memory: "128Mi"
              cpu: "500m"
